--- a/main.html
+++ b/main.html
@@ -7,6 +7,32 @@
 </head>
 
 <body>
+	<h1>hello Coder</h1>
+	<table>
+		<th>
+			<tr>
+				<td>Roll No</td>
+				<td>Names</td>
+			</tr>
+			<tr>
+				<td>Ram</td>
+				<td>20</td>
+			</tr>
+			<tr>
+				<td>sham</td>
+				<td>19</td>
+			</tr>
+
+		</th>
+	</table>
+
+	<h1>List of medias</h1>
+	<ol>
+		<li> <img src="https://picsum.photos/id/123/200/300" alt=""> </li>
+		<li> <video src="http://commondatastorage.googleapis.com/gtv-videos-bucket/sample/BigBuckBunny.mp4"></video> </li>
+		<li> <audio src="http://commondatastorage.googleapis"></audio> </li>
+	</ol>
+
 	<!-- the entire body must be written by student -->
     <script type="text/javascript" src="./script.js">
 </script>
