--- a/main.html
+++ b/main.html
@@ -8,23 +8,27 @@
 
 <body>
 	<h1>hello Coder</h1>
+	
 	<table>
-		<th>
-			<tr>
-				<td>Roll No</td>
-				<td>Names</td>
-			</tr>
-			<tr>
-				<td>Ram</td>
-				<td>20</td>
-			</tr>
-			<tr>
-				<td>sham</td>
-				<td>19</td>
-			</tr>
-
-		</th>
-	</table>
+		<tr>
+		  <th>Roll No</th>
+		  <th>Names</th>
+		   
+		</tr>
+		<tr>
+			<td>Ram</td>
+			<td>20</td>
+		</tr>
+		<tr>
+			<td>sham</td>
+			<td>19</td>
+		</tr>
+		<tr>
+			<td>sham</td>
+			<td>19</td>
+		</tr>
+		 
+	  </table>
 
 	<h1>List of medias</h1>
 	<ol>
