--- a/main.html
+++ b/main.html
@@ -40,7 +40,7 @@
 			  
 		</li>
 		<li> 
-			<audio controls>
+			<audio  width="320" height="240" controls>
 				<source src="http://commondatastorage.googleapis.com/codeskulptor-assets/Epoq-Lepidoptera.ogg" type="audio/ogg">
 				 
 			</audio>
