--- a/main.html
+++ b/main.html
@@ -10,8 +10,10 @@
 	
 	<table>
 		<tr>
-		  <th>Roll No</th>
-		  <th>Names</th>
+		  <!-- <th>Roll No</th>
+		  <th>Names</th> -->
+		  <td>Roll No</td>
+		  <td>Names</td>
 		   
 		</tr>
 		 
