--- a/main.html
+++ b/main.html
@@ -12,7 +12,7 @@
 		<tr>
 		  <!-- <th>Roll No</th>
 		  <th>Names</th> -->
-		  <td>Roll No</td>
+		  <td>Roll numbers</td>
 		  <td>Names</td>
 		   
 		</tr>
