--- a/main.html
+++ b/main.html
@@ -10,11 +10,11 @@
 	
 	<table>
 		<tr>
-		  <!-- <th>Roll No</th>
-		  <th>Names</th> -->
-		  <td>Roll numbers</td>
+		  <th>Roll numbers</th>
+		  <th>Names</th>
+		  <!-- <td>Roll numbers</td>
 		  <td>Names</td>
-		   
+		    -->
 		</tr>
 		 
 		<tr>
