--- a/main.html
+++ b/main.html
@@ -9,13 +9,16 @@
 <body>
 	
 	<table>
-		<tr>
-		  <th>Roll numbers</th>
-		  <th>Names</th>
-		  <!-- <td>Roll numbers</td>
-		  <td>Names</td>
-		    -->
-		</tr>
+		<thead>
+
+			<tr>
+			  <th>Roll numbers</th>
+			  <th>Names</th>
+			  <!-- <td>Roll numbers</td>
+			  <td>Names</td>
+				-->
+			</tr>
+		</thead>
 		<tr>
 			<td>19</td>
 			<td>sham</td>
