--- a/main.html
+++ b/main.html
@@ -19,14 +19,20 @@
 				-->
 			</tr>
 		</thead>
-		<tr>
-			<td>19</td>
-			<td>sham</td>
-		</tr>
-		<tr>
-			<td>19</td>
-			<td>sham</td>
-		</tr>
+		<tbody>
+
+			<tr>
+				<td>19</td>
+				<td>sham</td>
+			</tr>
+		</tbody>
+		<tfoot>
+
+			<tr>
+				<td>19</td>
+				<td>sham</td>
+			</tr>
+		</tfoot>
 		 
 		 
 	</table>
