--- a/main.html
+++ b/main.html
@@ -12,11 +12,11 @@
 		<thead>
 
 			<tr>
-			  <th>Roll numbers</th>
-			  <th>Names</th>
-			  <!-- <td>Roll numbers</td>
+			  <!-- <th>Roll numbers</th>
+			  <th>Names</th> -->
+			    <td>Roll numbers</td>
 			  <td>Names</td>
-				-->
+				
 			</tr>
 		</thead>
 		<tbody>
@@ -27,7 +27,6 @@
 			</tr>
 		</tbody>
 		<tfoot>
-
 			<tr>
 				<td>19</td>
 				<td>sham</td>
